# poc-poetry-partifact-plugin

./: CHANGELOG.md  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: release.yaml
poc_poetry_partifact_plugin/: plugin.py
poc_poetry_partifact_plugin/partifact/: auth_token.py  main.py  shell_commands.py
tests/: conftest.py  test_plugin.py
tests/partifact/: test_config.py  test_login.py  test_token.py
