[tool.poetry]
name = "poc-poetry-partifact-plugin"
version = "0.2.0"
description = "A POC poetry plugin that configure partifact"
authors = ["timothestes <timothestes@gmail.com>"]
readme = "README.md"
packages = [
    { include = "poc_poetry_partifact_plugin" },
]
homepage = "https://github.com/timothestes/poc-poetry-partifact-plugin"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
parse = "^1.19.0"
tomlkit = "^0.11.7"
typer = "^0.7.0"
boto3 = "^1.26.116"

[tool.poetry.group.dev.dependencies]
twine = "^4.0"
setuptools = "^67.6"
wheel = "^0.40.0"
black = "^23.3.0"
pytest = "^7.3.1"
poetry = "^1.4"
pytest-mock = "^3.10.0"
pyfakefs = "^5.2.2"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"

[tool.isort]
profile = "black"

[tool.poetry.plugins."poetry.application.plugin"]
poc-poetry-partifact-plugin = "poc_poetry_partifact_plugin.plugin:PocPartifactPlugin"